import java.util.HashMap;

public interface WeatherService {
  public HashMap<String,Object> temperature();
}
